Revert of DevTools: fix xhr breakpoint text overflow (https://codereview.chromium.org/216843002/)
Reason for revert:
Implied a bug: https://code.google.com/p/chromium/issues/detail?id=358136

Original issue's description:
> DevTools: fix xhr breakpoint text overflow
> 
> BUG=357520
> 
> Committed: https://src.chromium.org/viewvc/blink?view=rev&revision=170337

TBR=vsevik@chromium.org
NOTREECHECKS=true
NOTRY=true
BUG=357520

Review URL: https://codereview.chromium.org/219473005

git-svn-id: svn://svn.chromium.org/blink/trunk@170468 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/breakpointsList.css
+++ b/front_end/breakpointsList.css
@@ -33,7 +33,6 @@
     margin-bottom: 4px;
     margin-left: 23px;
     margin-right: 8px;
-    overflow: hidden;
 }
 
 #breakpoint-condition-input {
